refactoring FileTree.java
Signed-off-by: crizzzly <c.christina.rost@gmail.com>